# KtoMIDI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deploy.bat
resources/: KtoMIDI.qrc  KtoMIDI.rc
src/: HidDevice.cpp  HidDevice.h  HidDeviceTab.cpp  HidDeviceTab.h  HidMapping.cpp  HidMapping.h  InputMonitor.cpp  InputMonitor.h  KeyHook.cpp  KeyHook.h  KeyMapping.cpp  KeyMapping.h  KeyUtils.h  MainWindow.cpp  MainWindow.h  MappingDialog.cpp  MappingDialog.h  MidiEngine.cpp  MidiEngine.h  main.cpp  version.h  version.h.in
